--- a/about.html
+++ b/about.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <div class="well">
-    <h1>About me</h1>
-    <p>Hello, I am me.</p>
+    <h1>关于我的博客</h1>
+    <p>终于做出来了第一个博客，慢慢在学习，一定要在github上开始多些博客了。</p>
 </div>
